--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,3 +47,11 @@ h6 {
     pointer-events: none;
 }
 
+.swiper-slide {
+    pointer-events: none;
+}
+.swiper-slide-active {
+    pointer-events: auto;
+}
+
+
