--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,13 +107,16 @@ h6 { @apply text-[20px] leading-[22px] font-heading; }
 }
 
 .react-datepicker {
-    background: #F7F1E6 !important;
+    background: #fff !important;
     border: none !important;
+    border-radius: 16px !important;
     font-family: "Plus Jakarta Sans", "sans-serif" !important;
 }
 
 .react-datepicker__header:not(.react-datepicker__header--has-time-select) {
-    background: none !important;
+    background: rgba(247, 241, 230, 0.5) !important;
+    border-top-left-radius: 16px !important ;
+    border-top-right-radius: 16px !important ;
 }
 
 
